# web-browser-engineering

./: .gitignore  .mise.toml  CLAUDE.md  README.md  blank.html  browser.css  main.py  pyproject.toml
.github/workflows/: test.yml
chapter 1/: blank.html  browser.py
soyorin/: EXERCISE_NESTED_ELEMENTS.md  browser.py  cache.py  commnad.py  connection.py  const.py  draw.py  emoji.py  font.py  layout.py  lexer.py  lexer_test.py  style.py  test_lexer.py  test_nested_elements.py  test_nested_elements_README.md  url.py
test/: lexer.py  test_layout.py  test_lexer.py
web_browser_engineering.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
