[project]
name = "web-browser-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "regex>=2025.11.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["soyorin"]

[tool]

[tool.pyrefly]
project-includes = ["**/*.py*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
    "**/.[!/.]*/**/*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
